--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,8 @@ html {
 body {
   margin: 0;
 }
-header,footer {
+header,
+footer {
   background-color: #3b3d3df1;
   color: white;
   padding: 1rem;
@@ -20,7 +21,6 @@ header,footer {
 }
 #calculator,
 #results {
- 
   margin: 2rem auto;
   width: 40rem;
   max-width: 90%;
@@ -33,8 +33,8 @@ header,footer {
   text-align: center;
   background-color: cadetblue;
 }
-#calculator{
-    background-color: gray;
+#calculator {
+  background-color: gray;
 }
 #input_number {
   font: inherit;
@@ -46,6 +46,7 @@ header,footer {
   display: block;
   color: #3b3d3df1;
   text-align: center;
+  border-radius: 5px;
 }
 #calc_actions {
   margin-top: 1rem;
@@ -54,9 +55,11 @@ header,footer {
 
 #calculator button {
   font: inherit;
+  font-weight: bold;
   background: #3b3d3df1;
   color: white;
   border: 1px solid #3b3d3df1;
   padding: 1rem;
   cursor: pointer;
+  border-radius: 5px;
 }
